--- a/src/app/cv-section/admin/cv-section-admin.component.sass
+++ b/src/app/cv-section/admin/cv-section-admin.component.sass
@@ -3,7 +3,8 @@
 
 :host
   display: block
-  width: 100dvw
+  width: 100%
+  max-width: 100%
   background: var(--gradient-accent)
   flex: 1 1 auto
 
