--- a/src/app/cv-section/home/documents/certificate/styles/_responsive.sass
+++ b/src/app/cv-section/home/documents/certificate/styles/_responsive.sass
@@ -49,6 +49,8 @@
 
   .cv-documents-page
     background: transparent !important
+    max-width: none !important
+    margin: 0 !important
 
   .cv-main
     margin-top: 20px
