--- a/src/app/cv-section/home/documents/resume/styles/_responsive.sass
+++ b/src/app/cv-section/home/documents/resume/styles/_responsive.sass
@@ -53,6 +53,8 @@
 
   .cv-documents-page
     background: transparent !important
+    max-width: none !important
+    margin: 0 !important
 
   .cv-header,
   .cv-main
